cluster/apps/monitoring/goldilocks/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: monitoring
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "goldilocks.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: goldilocks-dashboard
          port: 80
